h1. CHANGELOG

h2. 1.5.0 May 21, 2012

* New "defaults" option to specify recipes and preferences (contributed by Bryan Stearns)
* revised README

h2. 1.4.14 May 20, 2012

* update 'add_user' recipe to rename folders used for Devise Haml views
* minor update to 'action_mailer' recipe for "Mandrill by MailChimp" option

h2. 1.4.13 May 19, 2012

* update 'action_mailer' recipe to add "Mandrill by MailChimp" option

h2. 1.4.12 May 17, 2012

* update 'action_mailer' recipe to allow choice of sending email via SMTP, Gmail, or SendGrid accounts
* update gem 'bootstrap-sass' from 2.0.1 to 2.0.3
* remove 'add_user' patch for https://github.com/RailsApps/rails3-application-templates/issues/35
* update gem 'haml' from 3.1.5 to 3.1.6
* update gem 'devise' from 2.1.0.rc2 to 2.1.0

h2. 1.4.11 May 13, 2012

* fix 'add_user' recipe to add patch for https://github.com/RailsApps/rails3-application-templates/issues/35
* update 'omniauth' recipe to add RSpec tests (contributed by Taylor Mock)
* update gem 'mongoid' from 2.4.9 to 2.4.10
* update gem 'factory_girl_rails' from 3.2.0 to 3.3.0

h2. 1.4.10 May 11, 2012

* fix 'subdomains' recipe to accommodate recent changes
* fix 'omniauth_email' recipe to redirect if user's email is blank (contributed by Taylor Mock)

h2. 1.4.9 May 11, 2012

* add 'responders' recipe (contributed by allen13)
* fix 'html5' recipe so Twitter Bootstrap icons will be available with 'bootstrap_sass' option
* fix 'cucumber' recipe to add ':require => false' and avoid warning message
* fix 'active_admin' recipe to correct typo for activeadmin-mongoid gem (contributed by Alex Kravets)
* fix 'users_page' recipe to force it to run after 'add_user' recipe
* fix 'add_user' recipe to remove a uniqueness constraint when Mongoid is used (contributed by nrser)
* fix 'add_user' recipe to remove superfluous 'attr_accessible' comment
* fix 'add_user' recipe to accommodate mongoid when Devise invitable module is used
* update gem 'devise' from 2.1.0.rc to 2.1.0.rc2