@@ -1,5 +1,11 @@
 h1. CHANGELOG
 
+h2. 1.5.1 June 4, 2012
+
+* update gem 'devise_invitable' from 1.0.1 to 1.0.2
+* update gem 'database_cleaner' from 0.7.2 to 0.8.0
+* fix 'omniauth' and 'add_user' recipes to improve regex for gsub_file (contributed by Hosam Aly)
+
 h2. 1.5.0 May 21, 2012
 
 * New "defaults" option to specify recipes and preferences (contributed by Bryan Stearns)
